--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
               class="scndbtn"
               onclick="todosorter()">
               <h4>
-                <i class="fas fa-sort-alpha-down"></i>
+              <i class="fa-solid fa-filter"></i>
               </h4>
             </button>
           </div>
