--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     <link
       rel="stylesheet"
       href="./css/style.css" />
+     <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" />
     <link
       rel="shortcut icon"
       href="./assets/_48cd7cb1-71d2-454c-a5a0-715b4cb45816.jpg"
