--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
               id="todoinput"
               name="todoinput" />
             <button onclick="todoadder()">
-              <h2>+</h2>
+              <i class="fa-solid fa-plus"></i>
             </button>
             <button
               class="scndbtn"
